--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -192,6 +192,7 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.97.114.182;
 allow 176.97.114.202;
+allow 177.149.156.136;
 allow 178.17.170.144;
 allow 178.17.170.23;
 allow 178.17.171.102;
@@ -219,7 +220,6 @@ allow 179.43.159.201;
 allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
-allow 179.55.88.178;
 allow 180.150.226.99;
 allow 185.100.85.132;
 allow 185.100.85.22;
@@ -268,7 +268,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -523,6 +522,7 @@ allow 188.68.36.28;
 allow 188.68.41.191;
 allow 188.68.49.235;
 allow 188.68.52.231;
+allow 188.68.52.247;
 allow 190.120.229.98;
 allow 190.211.254.97;
 allow 192.108.48.150;
@@ -626,7 +626,7 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.90;
+allow 195.47.238.89;
 allow 195.47.238.91;
 allow 195.80.151.242;
 allow 195.88.74.206;
@@ -872,6 +872,7 @@ allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
+allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
@@ -889,8 +890,8 @@ allow 23.154.177.27;
 allow 23.154.177.28;
 allow 23.154.177.29;
 allow 23.154.177.30;
-allow 23.154.177.31;
 allow 23.154.177.8;
+allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
 allow 23.173.216.67;
@@ -1359,8 +1360,8 @@ allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:2500:571:e95:6930:c716:eaf8:f394;
-allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
@@ -1482,9 +1483,8 @@ allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
+allow 45.129.0.166;
 allow 45.129.84.246;
-allow 45.129.84.247;
-allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.138.16.107;
@@ -1654,7 +1654,6 @@ allow 82.197.182.161;
 allow 82.208.23.192;
 allow 82.221.128.191;
 allow 82.221.131.5;
-allow 82.221.139.190;
 allow 82.85.247.254;
 allow 83.217.9.73;
 allow 83.96.213.63;
@@ -1682,7 +1681,6 @@ allow 89.147.110.118;
 allow 89.147.110.154;
 allow 89.147.110.82;
 allow 89.147.111.87;
-allow 89.168.17.166;
 allow 89.187.143.31;
 allow 89.221.215.139;
 allow 89.221.217.206;
