--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -115,7 +115,6 @@ allow 130.193.10.21;
 allow 130.193.15.186;
 allow 138.59.18.110;
 allow 139.99.172.11;
-allow 139.99.8.57;
 allow 141.11.25.44;
 allow 141.98.11.62;
 allow 142.171.12.88;
@@ -628,7 +627,7 @@ allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
 allow 195.47.238.89;
-allow 195.47.238.91;
+allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -900,7 +899,6 @@ allow 23.173.216.67;
 allow 23.94.211.25;
 allow 2400:d320:2202:5765::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
-allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
 allow 2406:8dc0:6005::97f2:9c02;
 allow 2407:3640:2207:8882::1;
@@ -1362,7 +1360,7 @@ allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:2500:571:e95:6930:c716:eaf8:f394;
-allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
@@ -1488,7 +1486,6 @@ allow 45.128.133.242;
 allow 45.129.0.166;
 allow 45.129.84.246;
 allow 45.129.84.247;
-allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.138.16.107;
@@ -1582,7 +1579,6 @@ allow 51.81.33.188;
 allow 5.181.80.107;
 allow 51.89.138.51;
 allow 51.89.153.112;
-allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
@@ -1687,6 +1683,7 @@ allow 89.147.110.118;
 allow 89.147.110.154;
 allow 89.147.110.82;
 allow 89.147.111.87;
+allow 89.168.17.166;
 allow 89.187.143.31;
 allow 89.221.215.139;
 allow 89.221.217.206;
