--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -111,7 +111,6 @@ allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 2400:d320:2202:5765::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
-allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
 allow 2406:8dc0:6005::97f2:9c02;
 allow 2407:3640:2207:8882::1;
@@ -567,7 +566,7 @@ allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:2500:571:e95:6930:c716:eaf8:f394;
-allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
