--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -566,7 +566,8 @@ set_real_ip_from 2a0b:f4c2::6;
 set_real_ip_from 2a0b:f4c2::7;
 set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
-set_real_ip_from 2a0c:2500:571:e95:6930:c716:eaf8:f394;
+set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
+set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:b641:6f0:8a::2;
@@ -650,7 +651,6 @@ set_real_ip_from 2a12:a800:2:1:45:141:215:169;
 set_real_ip_from 2a12:a800:2:1:45:141:215:17;
 set_real_ip_from 2a12:a800:2:1:45:141:215:19;
 set_real_ip_from 2a12:a800:2:1:45:141:215:21;
-set_real_ip_from 2a12:a800:2:1:45:141:215:226;
 set_real_ip_from 2a12:a800:2:1:45:141:215:28;
 set_real_ip_from 2a12:a800:2:1:45:141:215:40;
 set_real_ip_from 2a12:a800:2:1:45:141:215:56;
