--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -144,6 +144,7 @@ allow 154.213.187.66;
 allow 154.213.187.98;
 allow 154.216.16.27;
 allow 154.26.159.157;
+allow 154.9.228.63;
 allow 158.69.1.13;
 allow 160.119.249.240;
 allow 162.210.173.17;
@@ -187,6 +188,7 @@ allow 173.237.206.68;
 allow 173.249.57.253;
 allow 173.255.198.243;
 allow 176.118.193.33;
+allow 176.121.81.51;
 allow 176.227.215.50;
 allow 176.58.100.98;
 allow 176.58.121.177;
@@ -626,7 +628,7 @@ allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
 allow 195.47.238.89;
-allow 195.47.238.93;
+allow 195.47.238.92;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -1362,7 +1364,7 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
+allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
