--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -144,6 +144,7 @@ deny 154.213.187.66;
 deny 154.213.187.98;
 deny 154.216.16.27;
 deny 154.26.159.157;
+deny 154.9.228.63;
 deny 158.69.1.13;
 deny 160.119.249.240;
 deny 162.210.173.17;
@@ -187,6 +188,7 @@ deny 173.237.206.68;
 deny 173.249.57.253;
 deny 173.255.198.243;
 deny 176.118.193.33;
+deny 176.121.81.51;
 deny 176.227.215.50;
 deny 176.58.100.98;
 deny 176.58.121.177;
@@ -626,7 +628,7 @@ deny 195.47.238.84;
 deny 195.47.238.86;
 deny 195.47.238.87;
 deny 195.47.238.89;
-deny 195.47.238.93;
+deny 195.47.238.92;
 deny 195.80.151.242;
 deny 195.88.74.206;
 deny 198.251.84.163;
@@ -1362,7 +1364,7 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
-deny 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
+deny 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 deny 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
