--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -470,6 +470,7 @@ allow 185.220.103.6;
 allow 185.220.103.7;
 allow 185.220.103.8;
 allow 185.220.103.9;
+allow 185.225.226.182;
 allow 185.225.69.203;
 allow 185.225.69.232;
 allow 185.227.134.106;
@@ -628,7 +629,7 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.90;
+allow 195.47.238.89;
 allow 195.47.238.91;
 allow 195.80.151.242;
 allow 195.88.74.206;
@@ -1077,6 +1078,7 @@ allow 27.255.75.198;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
+allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1366,8 +1368,8 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
@@ -1471,6 +1473,7 @@ allow 2a13:d207:0:461::1;
 allow 31.13.195.22;
 allow 31.133.0.210;
 allow 31.220.75.237;
+allow 31.42.185.135;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.120.239.59;
@@ -1487,7 +1490,7 @@ allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
-allow 45.129.84.249;
+allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.138.16.107;
@@ -1615,6 +1618,7 @@ allow 57.128.171.125;
 allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
+allow 62.182.83.179;
 allow 62.182.84.146;
 allow 64.227.115.78;
 allow 65.87.7.42;
@@ -1660,14 +1664,17 @@ allow 84.16.224.227;
 allow 84.211.226.13;
 allow 84.239.46.144;
 allow 84.247.165.51;
+allow 85.158.108.52;
 allow 85.239.41.130;
 allow 85.93.218.204;
+allow 87.106.98.81;
 allow 87.118.110.27;
 allow 87.118.116.103;
 allow 87.118.116.12;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
+allow 87.120.254.132;
 allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
