--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -470,6 +470,7 @@ deny 185.220.103.6;
 deny 185.220.103.7;
 deny 185.220.103.8;
 deny 185.220.103.9;
+deny 185.225.226.182;
 deny 185.225.69.203;
 deny 185.225.69.232;
 deny 185.227.134.106;
@@ -628,7 +629,7 @@ deny 195.47.238.83;
 deny 195.47.238.84;
 deny 195.47.238.86;
 deny 195.47.238.87;
-deny 195.47.238.90;
+deny 195.47.238.89;
 deny 195.47.238.91;
 deny 195.80.151.242;
 deny 195.88.74.206;
@@ -1077,6 +1078,7 @@ deny 27.255.75.198;
 deny 2a00:16b0:1:243::7012:3117;
 deny 2a00:16b0:1:243::7012:a500;
 deny 2a00:16b0:1:243::7012:e817;
+deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
@@ -1366,8 +1368,8 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
-deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+deny 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
@@ -1471,6 +1473,7 @@ deny 2a13:d207:0:461::1;
 deny 31.13.195.22;
 deny 31.133.0.210;
 deny 31.220.75.237;
+deny 31.42.185.135;
 deny 35.0.127.52;
 deny 37.114.41.119;
 deny 37.120.239.59;
@@ -1487,7 +1490,7 @@ deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
 deny 45.128.133.242;
-deny 45.129.84.249;
+deny 45.129.84.247;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.138.16.107;
@@ -1615,6 +1618,7 @@ deny 57.128.171.125;
 deny 5.79.66.19;
 deny 62.133.45.2;
 deny 62.171.137.169;
+deny 62.182.83.179;
 deny 62.182.84.146;
 deny 64.227.115.78;
 deny 65.87.7.42;
@@ -1660,14 +1664,17 @@ deny 84.16.224.227;
 deny 84.211.226.13;
 deny 84.239.46.144;
 deny 84.247.165.51;
+deny 85.158.108.52;
 deny 85.239.41.130;
 deny 85.93.218.204;
+deny 87.106.98.81;
 deny 87.118.110.27;
 deny 87.118.116.103;
 deny 87.118.116.12;
 deny 87.118.116.90;
 deny 87.118.122.30;
 deny 87.118.122.51;
+deny 87.120.254.132;
 deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
